<resources>
    <string name="app_name">Medicos</string>
    <string name="mr_sandeep">Mr. Yash Singh</string>
    <string name="check_ehr">Check EHR</string>
    <string name="symptoms_note">Symptoms/Note</string>
    <string name="refer_to_doctor">Refer to Doctor</string>
    <string name="advice_test">Advice Test</string>
    <string name="search_test_name">Search test name</string>
    <string name="specification">Specification</string>
    <string name="add_section">Add Section</string>
    <string name="quantity">Quantity \/ </string>
    <string name="search_medicine_here">Search medicine here</string>
    <string name="dose_1">Dose 1</string>
    <string name="dose_2">Dose 2</string>
    <string name="add_dose">Add Dose</string>
    <string name="note">NOTE</string>
    <string name="change_date">Change Date</string>
    <string name="home">Home</string>
    <string name="doctor">Doctor</string>
    <string name="doIt">Do it</string>

    <string-array name="quantites">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preview">Preview</string>
    <string name="send">Send</string>
    <string name="clinic_name">Clinic name</string>
    <string name="clinic_location">Clinic Location</string>
    <string name="physician_s_name">Physician\'s Name</string>
    <string name="phone_number">Phone number</string>
    <string name="prescription_name">Prescription name</string>
    <string name="test_advised">Test advised</string>
    <string name="test_name">Test name</string>
    <string name="add_another">+ Add another</string>
    <string name="medicines_prescribed">Medicines prescribed</string>
    <string name="medicine_name">Medicine name</string>
    <string name="dosage_info">Dosage info</string>
    <string name="quantity2">Quantity</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="next_visit_date">Next Visit date</string>
    <string name="note_from_doctor">Note from doctor</string>
</resources>