<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DoctorsPrescription">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clinic_name"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/clinic_location"
            android:textColorHint="@color/black"
            android:background="@drawable/et_background"
            android:layout_margin="10dp"
            android:padding="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/physician_s_name"
            android:textColorHint="@color/black"
            android:background="@drawable/et_background"
            android:layout_margin="10dp"
            android:padding="10dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/phone_number"
            android:textColorHint="@color/black"
            android:background="@drawable/et_background"
            android:layout_margin="10dp"
            android:padding="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prescription_name"
            android:textColorHint="@color/black"
            android:background="@drawable/et_background"
            android:layout_margin="10dp"
            android:padding="10dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_advised"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/test_name"
            android:textColorHint="@color/black"
            android:background="@drawable/et_background"
            android:layout_margin="10dp"
            android:padding="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/specification"
            android:textColorHint="@color/black"
            android:background="@drawable/et_background"
            android:layout_margin="10dp"
            android:padding="10dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_another"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:background="@drawable/btn_background"
        android:layout_margin="10dp"
        android:padding="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicines_prescribed"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/medicine_name"
            android:textColorHint="@color/black"
            android:background="@drawable/et_background"
            android:layout_margin="10dp"
            android:padding="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dosage_info"
            android:textColorHint="@color/black"
            android:background="@drawable/et_background"
            android:layout_margin="10dp"
            android:padding="10dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/quantity2"
            android:textColorHint="@color/black"
            android:background="@drawable/et_background"
            android:layout_margin="10dp"
            android:padding="10dp"/>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_another"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:background="@drawable/btn_background"
        android:layout_margin="10dp"
        android:padding="10dp"/>



</LinearLayout>