<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PatientInfo">

    <EditText
        android:id="@+id/patientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:background="@drawable/et_background"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textColorHint="@color/black"
        android:background="@drawable/et_background"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:textColorHint="@color/black"
        android:background="@drawable/et_background"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/nextVisitDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/next_visit_date"
        android:textColorHint="@color/black"
        android:background="@drawable/et_background"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/noteFromTheDoctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_from_doctor"
        android:textColorHint="@color/black"
        android:background="@drawable/et_background"
        android:layout_margin="10dp"
        android:padding="10dp"/>


</LinearLayout>