<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/teal_200"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/doctorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/mr_sandeep"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:text="@string/check_ehr"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/symptoms_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:text="@string/symptoms_note"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:text="@string/refer_to_doctor"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/advice_test"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_bar_for_test"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/et_background"
                android:gravity="center"
                android:hint="@string/search_test_name"
                android:padding="10dp"
                android:textColorHint="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_background"
                android:padding="10dp"
                android:text="@string/specification"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <RadioButton
            android:id="@+id/addAnotherSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_section"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_bar_for_medicine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/et_background"
                android:gravity="center"
                android:hint="@string/search_medicine_here"
                android:padding="10dp"
                android:textColorHint="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdown_menu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end">

                <AutoCompleteTextView
                    android:id="@+id/autoComTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/et_background"
                    android:inputType="none"
                    android:padding="10dp"
                    android:text="@string/quantity"
                    android:textColor="@color/black"
                    tools:ignore="LabelFor" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/dose_1"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/dose_2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/add_dose"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/note"
                android:textColor="@color/black"
                android:textSize="17sp" />


        </LinearLayout>

        <RadioButton
            android:id="@+id/addAnotherSectionToDoses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_section"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:id="@+id/showDateHere"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_gravity="center"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/showTheDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_background"
            android:text="@string/next_visit_date"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:padding="10dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:text="@string/preview"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/btn_background"
                android:text="@string/send"
                android:id="@+id/sendData"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>



</ScrollView>